--- a/Learn HTML Forms by Building a Registration Form, Not started/index.html
+++ b/Learn HTML Forms by Building a Registration Form, Not started/index.html
@@ -15,8 +15,13 @@
             <label for="email">Enter Your Email: <input required id="email" type="email"></label>
             <label for="new-password">Create a New Password: <input required pattern="[a-z0-5]{8,}"  id="new-password" type="password"></label>
          </fieldset>
+         <fieldset>
+            <legend>Account type (required)</legend>
+            <label for="personal-account"><input id="personal-account" type="radio" name="account-type" checked > Personal </label>
+            <label for="business-account"><input id="business-account" type="radio" name="account-type"> Business</label>
+         </fieldset>
          <fieldset></fieldset>
-         <fieldset></fieldset>
+         <label for="terms-and-conditions"><input id="terms-and-conditions" type="checkbox" required ></label>
          <input type="submit" value="Submit">
       </form>
    </body>
