--- a/Learn HTML by Building a Cat Photo App, Not started/index.html
+++ b/Learn HTML by Building a Cat Photo App, Not started/index.html
@@ -36,7 +36,9 @@
    <section>
       <h2>Cat Form</h2>
       <form action="https://freecatphotoapp.com/submit-cat-photo">
-         <input type="text" name="catphotourl" placeholder="cat photo URL">
+         <input type="text" name="catphotourl" placeholder="cat photo URL" required>
+         <label for=""><input type="radio"> Indoor</label>
+         <button type="submit">Submit</button>
       </form>
    </section>
    </main>
