--- a/Learn HTML by Building a Cat Photo App, Not started/index.html
+++ b/Learn HTML by Building a Cat Photo App, Not started/index.html
@@ -48,8 +48,12 @@
             </fieldset>
             <fieldset>
                <legend>What's your cat's personality?</legend>
-               <input id="loving" type="checkbox">
+               <input name="personality" id="loving" type="checkbox" value="loving">
                <label for="loving">Loving</label>
+               <input name="personality" id="lazy" type="checkbox" value="lazy">
+               <label for="lazy">Lazy</label>
+               <input name="personality" id="energetic" type="checkbox" value="energetic">
+               <label for="energetic">Energetic</label>
             </fieldset>
             <button type="submit">Submit</button>
          </form>
