--- a/Learn HTML by Building a Cat Photo App, Not started/index.html
+++ b/Learn HTML by Building a Cat Photo App, Not started/index.html
@@ -1,5 +1,8 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+   <title>CatPhotoApp</title>
+</head>
 <body>
    <main>
       <h1>CatPhotoApp</h1>
@@ -43,12 +46,12 @@
             <input type="text" name="catphotourl" placeholder="cat photo URL" required>
             <fieldset>
                <legend>Is your cat an indoor or outdoor cat?</legend>
-               <label for=""><input name="indoor-outdoor" id="indoor" type="radio" value="indoor"> Indoor</label>
+               <label for=""><input checked  name="indoor-outdoor" id="indoor" type="radio" value="indoor"> Indoor</label>
                <label for=""><input name="indoor-outdoor" id="outdoor" type="radio" value="outdoor"> Outdoor</label>
             </fieldset>
             <fieldset>
                <legend>What's your cat's personality?</legend>
-               <input name="personality" id="loving" type="checkbox" value="loving">
+               <input name="personality" checked  id="loving" type="checkbox" value="loving">
                <label for="loving">Loving</label>
                <input name="personality" id="lazy" type="checkbox" value="lazy">
                <label for="lazy">Lazy</label>
@@ -59,6 +62,9 @@
          </form>
       </section>
    </main>
+   <footer>
+      <p>No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a></p>
+   </footer>
 </body>
 
 </html>
